# apiku

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: ci.yml  release.yml
assets/tester/: tester.css  tester.js
assets/webapp/: app.css  app.js
benches/: core.rs
public/: README.md  robots.txt
src/: api.rs  app.css  app.js  config.rs  cossora.rs  deep_extractor.rs  engine.rs  error.rs  fingerprint.rs  lib.rs  log.rs  main.rs  models.rs  opaque.rs  parser.rs  pipeline.rs  rate_limiter.rs  retry.rs  search.rs  server.rs  sysspec.rs  tester.css  tester.js  tester.rs  webapp.rs
src/adapters/: anichin.rs  cosplaytele.rs  donghua.rs  lk21.rs  lmanime.rs  manga.rs  mangaball.rs  mod.rs  nekopoi.rs  nhentai.rs  novelid.rs  otakudesu.rs  otakudesufit.rs  wordpress.rs
src/web/: api.rs  cossora.rs  dramabox.rs  mod.rs  nekopoi_stream.rs  search.rs  server.rs  tester.rs  webapp.rs
