[package]
name = "apiku"
version = "0.2.1"
edition = "2021"
authors = ["risqinf"]
license = "MIT"
description = "RESTful scraping API for manga, donghua, cosplay, doujin, and novel sources with opaque IDs and image proxy"
repository = "https://github.com/risqinf/apiku"
readme = "README.md"

[[bin]]
name = "apiku"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "cookies", "gzip", "brotli", "deflate"], default-features = false }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
regex = "1"
url = "2"
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
once_cell = "1"
base64 = "0.22"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-br", "trace", "set-header", "request-id"] }
moka = { version = "0.12", features = ["future"] }
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1"
percent-encoding = "2"
maud = { version = "0.27", features = ["axum"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
nu-ansi-term = "0.50"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
