[package]
name = "apiku"
version = "0.2.7"
edition = "2021"
authors = ["risqinf"]
license = "MIT"
description = "RESTful scraping API for manga, anime, donghua, movies, cosplay, doujin, novel, adult-anime, and drama sources with opaque IDs and image/HLS proxy"
repository = "https://github.com/risqinf/apiku"
readme = "README.md"

[[bin]]
name = "apiku"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["native-tls", "json", "cookies", "gzip", "brotli", "deflate"], default-features = false }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
regex = "1"
url = "2"
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
once_cell = "1"
base64 = "0.22"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-br", "trace", "set-header", "request-id"] }
moka = { version = "0.12", features = ["future"] }
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1"
tokio-util = { version = "0.7", features = ["io"] }
percent-encoding = "2"
maud = { version = "0.27", features = ["axum"] }
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
sha2 = "0.10"
md5 = "0.7"
hmac = "0.12"
hex = "0.4"
aes = "0.8"
cbc = "0.1"
nu-ansi-term = "0.50"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# TLS backend: we use reqwest's `native-tls` (OpenSSL on Linux) so our client's
# TLS/JA3 fingerprint matches a real OpenSSL stack. Some upstream WAFs (e.g.
# DoodStream / playmogo) 403 the rustls fingerprint but accept OpenSSL — the
# same handshake curl uses. Native (host) Linux/macOS/Windows builds link the
# system TLS. Cross-compiled / static targets (musl, aarch64 via `cross`) have
# no usable system OpenSSL in their sysroot, so there we compile OpenSSL from
# source (`vendored`) and statically link it into the binary — keeping the
# release artifacts self-contained and portable across any VPS.
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bench]]
name = "core"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
